<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/btnLimpiar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextBoxMateria_ActivityMain" />

    <ListView
        android:id="@+id/listTiposPiezas"
        android:layout_width="match_parent"
        android:layout_height="154dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <GridView
        android:id="@+id/gridPiezas"
        android:layout_width="match_parent"
        android:layout_height="158dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etNombrePieza"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:hint="@string/TextBoxNombrePieza_ActivityMain"
        android:visibility="visible" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etFabricante"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:hint="@string/fabricante_TextBoxFabricante_ActivityMain" />

    <Button
        android:id="@+id/btnInsertar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insertar_botonInsertar_ActivityMain" />

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/borrar_botonBorrar_ActivityMain" />

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actualizar_botonActualizar_ActivityMain" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/limpiar_botonLimpiar_ActivityMain" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salir_botonSalir_ActivityMain" />

    <!-- Aquí puedes agregar más widgets o vistas para la funcionalidad principal -->
</LinearLayout>
